# Cents

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  Makefile  README.md  main.py  playground.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml  release.yml  tests.yml
cents/: data_generator.py  trainer.py
cents/datasets/: airquality.py  commercial.py  metraq.py  timeseries_dataset.py  utils.py  walmart.py
cents/eval/: eval.py  eval_metrics.py  (+2 more)
config/: config.yaml  data_config.yaml  model_config.yaml
data_utils/: dataset.py  gpt_messages.json  openpower.py  pecanstreet.py  utils.py
datasets/: openpower.py  pecanstreet.py  timeseries_dataset.py  utils.py
docs/: Makefile  conf.py  index.rst  make.bat
endata/: __init__.py  data_generator.py  trainer.py
eval/: discriminative_metric.py  evaluator.py  loss.py  metrics.py  predictive_metric.py  utils.py
generator/: acgan.py  conditioning.py  config.py  data_generator.py  generative_model.py  gpt_messages.json  llm.py  normalizer.py  options.py  timegan.py
lightning_generator/: acgan.py
logs/: events.out.tfevents.1723746453.dai-desk32.270264.0  events.out.tfevents.1723746533.dai-desk32.270395.0
scripts/: eval_pretrained.py  generate.py  train.py
src/: data_generator.py  trainer.py
template/: gpt_system_prompt_one_shot.txt
test/: conftest.py  test_dataset.py  test_models.py
tests/: conftest.py  test_data_config.yaml  test_dataset.py  test_endata.py
tutorials/: generate_data.ipynb  train.ipynb  tutorial.ipynb
(+126 files in other folders)
