[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "endata"
version = "0.1.0"
description = "A library for generative modeling and evaluation of synthetic household-level electricity load timeseries."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Michael Fuest", email = "michael.fuest@tum.de" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["generative", "energy", "diffusion", "deep learning", "GAN"]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "tiktoken",
    "transformers",
    "torch",
    "accelerate",
    "torchvision",
    "tensorboard",
    "pyyaml",
    "mkl",
    "dtaidistance",
    "seaborn",
    "einops",
    "sentencepiece",
    "omegaconf",
    "hydra-core",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "mypy",
    "black",
    "isort",
    "autoflake",
]

testing = [
    "pytest>=6.0",
    "pytest-cov",
]
docs = [
    "sphinx",
    "furo",
]

[tool.setuptools]
packages = ["endata"]
include-package-data = true

[tool.setuptools.package-data]
"endata" = ["data/*.dat"]
